# flipsky-bldc-apm32

./: CMakeLists.txt  CMakePresets.json  STM32F405RGTX_FLASH.ld  commandfile.jlink
src/: datatypes.h  main.c  main.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  utils_math.c  utils_math.h
src/hw/: hw.c  hw.h
src/motor-control/: foc_math.c  foc_math.h  mcconf_default.h  mcpwm_foc.c  mcpwm_foc.h  virtual_motor.c  virtual_motor.h
startup/: startup_stm32f405rgtx.s
